--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 Flask
-requests
-pycryptodome
-protobuf_decoder
+requests==2.32.3
+pycryptodome==3.20.0
+protobuf==5.28.2
+google==3.0.0
+Werkzeug==2.0.3
+rich
