--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 Flask
-requests==2.32.3
-pycryptodome==3.20.0
-protobuf==5.28.2
-google==3.0.0
-Werkzeug==2.0.3
+requests
+pycryptodome
+protobuf_decoder
 rich
